force-app/main/default/objects/Rate_Procurement__c/Rate_Procurement__c.object-meta.xml
<CustomObject>
    <label>Rate Procurement</label>
    <nameField>
        <label>Procurement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates Procurement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>