force-app/main/default/objects/Rate_Procurement__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Rates Procurement</relationshipLabel>
    <relationshipName>Rates_Procurement</relationshipName>
    <type>Lookup</type>
</CustomField>