force-app/main/default/objects/Rate_Procurement__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Enquiry__c</referenceTo>
    <relationshipLabel>Rates Procurement</relationshipLabel>
    <relationshipName>Rates_Procurement</relationshipName>
    <type>Lookup</type>
</CustomField>