force-app/main/default/objects/Rate_Procurement__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Type</label>
    <referenceTo>Equipment_Type__c</referenceTo>
    <relationshipLabel>Rates Procurement</relationshipLabel>
    <relationshipName>Rates_Procurement</relationshipName>
    <type>Lookup</type>
</CustomField>