force-app/main/default/objects/Rate_Procurement__c/fields/INCO_Term__c.field-meta.xml
<CustomField>
    <fullName>INCO_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INCO Term</label>
    <referenceTo>INCO_Term__c</referenceTo>
    <relationshipLabel>Rates Procurement</relationshipLabel>
    <relationshipName>Rates_Procurement</relationshipName>
    <type>Lookup</type>
</CustomField>