force-app/main/default/objects/Rate_Procurement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Rates Procurement</relationshipLabel>
    <relationshipName>Rates_Procurement</relationshipName>
    <type>Lookup</type>
</CustomField>