force-app/main/default/objects/Rate_Procurement__c/fields/Port_of_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Discharge</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>Rates Procurement (Port of Discharge)</relationshipLabel>
    <relationshipName>Rates_Procurement1</relationshipName>
    <type>Lookup</type>
</CustomField>