force-app/main/default/objects/Rate_Procurement__c/fields/RMS__c.field-meta.xml
<CustomField>
    <fullName>RMS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMS</label>
    <referenceTo>RMS__c</referenceTo>
    <relationshipLabel>Rates Procurement</relationshipLabel>
    <relationshipName>Rates_Procurement</relationshipName>
    <type>Lookup</type>
</CustomField>