force-app/main/default/objects/Rate_Procurement__c/fields/Shipping_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Line</label>
    <referenceTo>Shipping_Line__c</referenceTo>
    <relationshipLabel>Rates Procurement</relationshipLabel>
    <relationshipName>Rates_Procurement</relationshipName>
    <type>Lookup</type>
</CustomField>