force-app/main/default/objects/Rate_Procurement__c/recordTypes/Pending.recordType-meta.xml
<RecordType>
    <fullName>Pending</fullName>
    <active>true</active>
    <label>Pending</label>
</RecordType>