force-app/main/default/objects/Rate_Procurement__c/listViews/Received.listView-meta.xml
<ListView>
    <fullName>Received</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rate_Procurement__c.Received</value>
    </filters>
    <label>Received</label>
</ListView>